--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
   },
-  "author": "Jorge Guerrero",
+  "author": "Jonas Schedtmann",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
-    "sass": "^1.26.10"
+    "@parcel/transformer-sass": "^2.4.1",
+    "parcel": "^2.4.1",
+    "sass": "^1.49.11"
   },
   "dependencies": {
     "core-js": "^3.6.5",
